--- a/cv.html
+++ b/cv.html
@@ -112,7 +112,7 @@
                             </div>
                             <div class="col-md-6"><span class="period">09/2018 - Today</span></div>
                         </div>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+                        <p class="text-muted">Learning practical knowledge through enterprise projects. Learning theorical knowledge on need.</p>
                     </div>
                 </div>
                 <div class="row mt-5">
