--- a/index.html
+++ b/index.html
@@ -11134,7 +11134,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <iframe name="Framename" src="https://biblirimas.herokuapp.com/" width="100%"
+                                <iframe name="Framename" src="about:blank" width="100%"
                                         height="100%" frameborder="0" scrolling="auto" class="frame-area">
                                 </iframe>
                             </div>
@@ -11168,7 +11168,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <iframe name="Framename" src="https://credo-cep.herokuapp.com/" width="100%" height="100%" frameborder="0"
+                                <iframe name="Framename" src="about:blank" width="100%" height="100%" frameborder="0"
                                         scrolling="auto" class="frame-area">
                                 </iframe>
                             </div>
@@ -11422,7 +11422,15 @@
 <script src="https://unpkg.com/popper.js@1.15.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-<script>$(document).ready(function () {
+<script>
+    $('#BiblIrimas').on('shown.bs.modal', function() {
+        $(this).find('iframe').attr('src','https://biblirimas.herokuapp.com/')
+    });
+    $('#Credo-CEP').on('shown.bs.modal', function() {
+        $(this).find('iframe').attr('src','https://credo-cep.herokuapp.com/')
+    });
+
+    $(document).ready(function () {
     $("[data-bs-hover-animate]").mouseenter(function () {
         var a = $(this);
         a.addClass("animated " + a.attr("data-bs-hover-animate"))
