--- a/index.html
+++ b/index.html
@@ -9797,14 +9797,6 @@
         }
     }
 
-    .text-lowercase {
-        text-transform: lowercase !important
-    }
-
-    .text-uppercase {
-        text-transform: uppercase !important
-    }
-
     .text-capitalize {
         text-transform: capitalize !important
     }
@@ -11000,8 +10992,8 @@
         border-bottom: none;
         cursor: help
     }
-    </style>
-    <style>#toast-container {
+
+    #toast-container {
         position: sticky;
         z-index: 1055;
         top: 0
@@ -11022,7 +11014,8 @@
         padding-right: 20px
     }
     </style>
-    <style>html {
+    <style>
+        html {
         scroll-behavior: smooth
 
 
